source/carehub/main/default/objects/SyntilioPlatformEvent__e/SyntilioPlatformEvent__e.object-meta.xml
<CustomObject>
    <label>Syntilio Platform Event</label>
    <pluralLabel>Syntilio Platform Events</pluralLabel>
</CustomObject>