source/carehub/main/default/objects/SyntilioPlatformEvent__e/fields/AssetDescription__c.field-meta.xml
<CustomField>
    <fullName>AssetDescription__c</fullName>
    <label>Asset Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>