source/carehub/main/default/objects/SyntilioPlatformEvent__e/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <label>Asset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>