source/carehub/main/default/objects/SyntilioPlatformEvent__e/fields/EventCode__c.field-meta.xml
<CustomField>
    <fullName>EventCode__c</fullName>
    <label>Event Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>