source/carehub/main/default/objects/SyntilioPlatformEvent__e/fields/SupplierEventCode__c.field-meta.xml
<CustomField>
    <fullName>SupplierEventCode__c</fullName>
    <label>Supplier Event Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>